--- a/administrator/templates/frenchconnections/less/template.less
+++ b/administrator/templates/frenchconnections/less/template.less
@@ -105,12 +105,16 @@ a[href*="index.php?option=com_rental&task=propertyversions.add"]:before {
     margin-right: 10px;
 }
 
+fieldset .checkboxes > ul li {
+  float:left;
+  width:50%;
+}     
 
-  .facilities-container {
-    display:inline-block;
-    float:left;
-    width:33%;
-  }
+
+
+
+
+
 
 /* Panel styles */
 
